[package]
name = "source"
version = "0.1.0"
authors = ["root"]

[dependencies]
diesel = { version = "*", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "*", features = ["sqlite"] }
chrono = { version ="*", features = ["serde"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = { version = "*", features = ["json"] }
dotenv = "*"
rocket_cors = "*"

[[test]]
name = "tests"
